--- a/entries/index.hbs
+++ b/entries/index.hbs
@@ -9,9 +9,8 @@
     {{> favicons}}
     {{> head_scripts}}
   </head>
-  <body class="fade-in font-body text-18 bg-gray-1 overflow-x-hidden w-screen relative sm:text-26 lg:text-45">
-    <section id="app" class="overflow-x-hidden w-screen relative">
-      {{> loading_page}}
+  <body>
+    <section id="app">
     </section>
   </body>
 </html>
