--- a/css/custom.css
+++ b/css/custom.css
@@ -1,16 +1,9 @@
 
-.blur {
-  filter: blur(7px);
-}
 
-.underline-yellow-7 {
-  text-decoration-color: hsl(36, 77%, 49%)
+.md h1 {
+    font-size: 3rem;
+    text-align: center;
 }
-
-.underline-blue-5 {
-  text-decoration-color: hsl(205, 65%, 55%)
-}
-
 
 
 /* ====== ====== ANIMATIONS ====== ====== */
