--- a/entries/templates/extra_scripts_and_css.hbs
+++ b/entries/templates/extra_scripts_and_css.hbs
@@ -3,3 +3,5 @@
 
 <link rel="stylesheet" href="/static/highlight/github.css">
 <script type="text/javascript" src="/static/highlight/highlight.pack.js"></script>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/github-markdown-css/3.0.1/github-markdown.css" integrity="sha256-jyWGtg7ocpUge8Zt/LotwFtPMWE23n7jgkHHw/Ejh+U=" crossorigin="anonymous" />
