--- a/entries/templates/favicons.hbs
+++ b/entries/templates/favicons.hbs
@@ -3,7 +3,11 @@
 <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 <link rel="manifest" href="/site.webmanifest">
-<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#2b5797">
-<meta name="msapplication-TileColor" content="#2b5797">
+<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#000000">
+<meta name="apple-mobile-web-app-title" content="Seed">
+<meta name="application-name" content="Seed">
+<meta name="msapplication-TileColor" content="#00a300">
 <meta name="theme-color" content="#ffffff">
+
+
 
