--- a/entries/templates/social_media.hbs
+++ b/entries/templates/social_media.hbs
@@ -1,19 +1,19 @@
 {{! https://megatags.co/ ; meta "name" changed to "property" }}
 {{! COMMON TAGS }}
 <meta charset="utf-8">
-<title>Kavik.cz</title>
+<title>Seed</title>
 {{! Search Engine }}
-<meta name="description" content="Martin Kavík - freelance developer">
-<meta name="image" content="https://kavik.cz/static/images/og_image.jpg">
+<meta name="description" content="Rust framework for creating fast and reliable web apps">
+<meta name="image" content="https://seed-rs.org/static/images/og_image.jpg">
 {{! Schema.org for Google }}
-<meta itemprop="name" content="Kavik.cz">
-<meta itemprop="description" content="Martin Kavík - freelance developer">
-<meta itemprop="image" content="https://kavik.cz/static/images/og_image.jpg">
+<meta itemprop="name" content="Seed">
+<meta itemprop="description" content="Rust framework for creating fast and reliable web apps">
+<meta itemprop="image" content="https://seed-rs.org/static/images/og_image.jpg">
 {{! Open Graph general (Facebook, Pinterest & Google+) }}
-<meta property="og:title" content="Kavik.cz">
-<meta property="og:description" content="Martin Kavík - freelance developer">
-<meta property="og:image" content="https://kavik.cz/static/images/og_image.jpg">
-<meta property="og:url" content="https://kavik.cz">
-<meta property="og:site_name" content="Martin Kavík">
+<meta property="og:title" content="Seed">
+<meta property="og:description" content="Rust framework for creating fast and reliable web apps">
+<meta property="og:image" content="https://seed-rs.org/static/images/og_image.jpg">
+<meta property="og:url" content="https://seed-rs.org/">
+<meta property="og:site_name" content="Seed">
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="website">
