--- a/css/custom.css
+++ b/css/custom.css
@@ -16,18 +16,17 @@
   }
 
   .content-container {
-    padding-left:25%;
-    width:80%;
+    padding-left:330px;
+    width:100%;
     
   }
 
   .sidebar {  
     height: 100%;
-    width: 20%;
+    width: 300px;
     position: fixed;
     z-index: 1;
     top: 0;
-    left: 0;
     overflow-x: hidden;
   }
 }
